src/test/ui/non_modrs_mods/non_modrs_mods.stderr
error[E0658]: mod statements in non-mod.rs files are unstable (see issue #44660)
  --> $DIR/modrs_mod/inner_foors_mod.rs:11:9
   |
LL | pub mod innest;
   |         ^^^^^^
   |
   = help: add #![feature(non_modrs_mods)] to the crate attributes to enable
   = help: on stable builds, rename this file to inner_foors_mod/mod.rs

error[E0658]: mod statements in non-mod.rs files are unstable (see issue #44660)
  --> $DIR/foors_mod.rs:13:9
   |
LL | pub mod inner_modrs_mod;
   |         ^^^^^^^^^^^^^^^
   |
   = help: add #![feature(non_modrs_mods)] to the crate attributes to enable
   = help: on stable builds, rename this file to foors_mod/mod.rs

error[E0658]: mod statements in non-mod.rs files are unstable (see issue #44660)
  --> $DIR/foors_mod.rs:14:9
   |
LL | pub mod inner_foors_mod;
   |         ^^^^^^^^^^^^^^^
   |
   = help: add #![feature(non_modrs_mods)] to the crate attributes to enable
   = help: on stable builds, rename this file to foors_mod/mod.rs

error[E0658]: mod statements in non-mod.rs files are unstable (see issue #44660)
  --> $DIR/foors_mod/inner_foors_mod.rs:11:9
   |
LL | pub mod innest;
   |         ^^^^^^
   |
   = help: add #![feature(non_modrs_mods)] to the crate attributes to enable
   = help: on stable builds, rename this file to inner_foors_mod/mod.rs

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
